--- a/src/styles/Colors.scss
+++ b/src/styles/Colors.scss
@@ -12,8 +12,8 @@ $yellow-green:#c0c56b;
 
 // color patterns for this website
 
-$white:#F2F2F4;
-$greengrey:#6D8687;
-$greengrey2:#93A5A9;
-$bluegrey:#6C7D88;
-$bluegrey2:#43535C;
+$white:#F8F8F9;
+$grey:#B5B6B4;
+$grey2:#93A5A9;
+$yellow:#F2B35B;
+$grey3:#687A8B;
