--- a/src/styles/FooterStyle.scss
+++ b/src/styles/FooterStyle.scss
@@ -4,17 +4,15 @@
     width: 100%;
     height: 3.5%;
     bottom:0%;
-    align-items: center;
-    background-color: $bluegrey2;
+    background-color: $grey2;
     color: $white;
-    text-align: center;
 }
 
 .footer-copyright{
     position: relative;
     height: 100%;
     width: 50%;
-    float: left;
+    float: left;  
 }
 .footer-contact{
     position: relative;
@@ -28,6 +26,10 @@
 }
 
 .footer-contact a:hover{
-    color:$greengrey2;
+    color:$yellow;
 }
 
+
+@media(max-width:960px){
+
+}
