working on register page

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,9 @@
 @import '../src//styles/Colors.scss';
+
 html, body{
   min-height:100%;
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Quicksand', sans-serif !important;
   font-size: 16px;
- 
 }
 body{height:100vh;
   margin: 0;
