--- a/src/styles/NavStyle.scss
+++ b/src/styles/NavStyle.scss
@@ -3,8 +3,11 @@
 .navbar{
     position: fixed;
     top:5%;
-    width: 95%;
+    width: 100%;
     display: flex;
     justify-content: flex-end;
-
+    z-index: 1;
+    padding-left: 10%;
+    padding-right: 5%;
 }
+
