--- a/src/styles/UtilityStyle.scss
+++ b/src/styles/UtilityStyle.scss
@@ -9,7 +9,7 @@
     color: $white;
     height: 30px;
     width: auto;
-    border-radius: 8px;
+    border-radius: .25rem;
     -webkit-transition-duration: 0.2s; /* Safari */
     transition-duration: 0.2s;
 }
