--- a/src/styles/NavStyle.scss
+++ b/src/styles/NavStyle.scss
@@ -1,13 +1,38 @@
 @import'./Colors.scss';
 
+
 .navbar{
     position: fixed;
-    top:5%;
+    top:3%;
     width: 100%;
-    display: flex;
-    justify-content: flex-end;
+    height:auto;
     z-index: 1;
-    padding-left: 10%;
-    padding-right: 5%;
+    justify-content: start;
 }
 
+.navbar-logo{
+    position: relative;
+    left :5%;
+    height: 100%;
+    width: 30%;
+    float: left;
+    justify-content: start;
+    text-align: start;
+    font-size: xx-large;
+}
+
+.navbar-logo a{
+    color: $grey3;
+    font-size:xx-large;
+    transition: color 0.2s ease-in-out;
+}
+.navbar-logo a:hover{
+    color: $yellow;
+    text-decoration: none;
+}
+
+.navbar-icon{
+    position: relative;
+    height: 100%;
+    left:60%;
+}
