--- a/src/styles/NavStyle.scss
+++ b/src/styles/NavStyle.scss
@@ -12,7 +12,6 @@
 
 .navbar-logo{
     position: relative;
-    left :5%;
     height: 100%;
     width: 30%;
     float: left;
@@ -31,8 +30,15 @@
     text-decoration: none;
 }
 
+.navbar-test{
+    height: 100%;
+    width:40%;
+    background-color: $grey;
+}
+
 .navbar-icon{
     position: relative;
     height: 100%;
-    left:60%;
+    width: 30%;
+    right:0%;
 }
