--- a/src/styles/ItemDetailStyle.scss
+++ b/src/styles/ItemDetailStyle.scss
@@ -1,9 +1,11 @@
 @import "./Colors.scss";
 .item-detail-wrapper{
     position: relative;
-    height: 60%;
+    margin: 0;
+    height: 50%;
     width: 60%;
     left: 20%;
-    top: 20%;
+    top:20%;
+  
     background-color:$yellow;
 }
