--- a/src/index.scss
+++ b/src/index.scss
@@ -5,8 +5,12 @@ html, body{
   font-family: 'Quicksand', sans-serif !important;
   font-size: 16px;
 }
-body{height:100vh;
+body{
+  height:100vh;
   margin: 0;
+}
+p{
+  margin:0 !important;
 }
 #root{
     height:100%;
@@ -16,9 +20,8 @@ body{height:100vh;
 .App {
   position: relative;
   text-align: center;
-  position: relative;
-  height: 100%;
-  width: 100%;
+  height: 100% ;
+  width: 100% ;
   background-color:$white;
 }
 
