--- a/src/styles/Colors.scss
+++ b/src/styles/Colors.scss
@@ -17,3 +17,12 @@ $grey:#B5B6B4;
 $grey2:#93A5A9;
 $yellow:#F2B35B;
 $grey3:#687A8B;
+
+//bootstrap color
+$bootstrap-green:#28a745;
+$bootstrap-blue:#17a2b8;
+$bootstrap-yellow:#ffc107;
+$bootstrap-red:#dc3545;
+
+//utility slider color
+$slider-rail-white:#e9ecef;
