--- a/src/styles/ItemDetailStyle.scss
+++ b/src/styles/ItemDetailStyle.scss
@@ -2,10 +2,81 @@
 .item-detail-wrapper{
     position: relative;
     margin: 0;
-    height: 50%;
+    height: auto;
     width: 60%;
     left: 20%;
     top:20%;
+    background-color: $light-blue-gray;
   
-    background-color:$yellow;
 }
+
+.container{
+    align-items: start;
+    text-align: start;
+    justify-content: center;
+    height: 100%;
+}
+
+.container .row{
+    height: 20%;
+    padding: 1%;
+}
+
+.container .col-8 .slider-wrapper{
+    position: relative;
+    top:40%;
+}
+
+.container .col-4 .my-button{
+    position: relative;
+    margin-left: 10%;
+}
+
+.category-wrapper{
+    position: relative;
+    width: 100%;
+    float: left;
+    height: 100%;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+  }
+  .category-text{
+    position: relative;
+    float: left;
+    width: 50%;
+    height: 100% !important;
+    line-height: 40px;
+  }
+
+  .custom-select{
+    position: relative;
+    width: 100% !important;
+    border: 1px solid #ced4da;
+    border-radius: 1rem;
+    outline: none;
+  }
+
+  .custom-select:focus{  
+        border: 1px solid $yellow;  
+  }
+  
+  .expireDate-wrapper{
+    position: relative;
+    width: 100%;
+    float: left;
+    height: 100%;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .expireDate-picker{
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    width: 100% !important;
+    border: 1px solid #ced4da;
+    border-radius: 1rem;
+    outline: none;
+  }
