--- a/src/styles/ItemDetailStyle.scss
+++ b/src/styles/ItemDetailStyle.scss
@@ -6,7 +6,9 @@
     width: 60%;
     left: 20%;
     top:20%;
-    background-color: $light-blue-gray;
+    background-color: $white;
+    border-radius: 0.25rem;
+    box-shadow: 0 6px 8px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
   
 }
 
