--- a/src/styles/ItemListStyle.scss
+++ b/src/styles/ItemListStyle.scss
@@ -3,7 +3,7 @@
     position: relative;
     margin: 0;
     height: 70%;
-    width: 80%;
+    width: 1100px;
     top:15%;
     left:10%;
     background-color: $white;
@@ -22,8 +22,34 @@
     list-style-type: none;
 }
 .item-searchbar{
-    position: relative;
+    display: flex;
+    width:100%;
     height: 10%;
+    padding: 5px;
+    float: left;
+}
+.item-searchbar-input{
+    position: relative;
+    padding-left: 40px;
+    width: 48%;
+}
+.item-searchbar-filter{
+    padding-left: 10px;
+    display: flex;
+    position: relative;
+    width: 48%;
+    float: left;
+}
+.item-searchbar-filter .Dropdown-root{
+    float: left;
+    position: relative;
+    width: 50%;
+}
+
+.item-searchbar .Dropdown-control{
+    border: 1px solid #ced4da;
+    border-radius: 1rem;
+    padding: .375rem .75rem;
 }
 .item-card-wrapper{
     height: 120px;
