--- a/src/styles/RegisterStyle.scss
+++ b/src/styles/RegisterStyle.scss
@@ -43,3 +43,12 @@
     box-shadow: none !important;
     border: none !important;
 }
+
+.ban-hover:hover{
+    background-color: $grey3 !important;
+    cursor:not-allowed !important;
+    box-shadow: none !important;
+}
+.repeatPasswordtip{
+    color: $bootstrap-red;
+}
