update dynamodb schema

--- a/src/styles/AuthenticatorStyle.scss
+++ b/src/styles/AuthenticatorStyle.scss
@@ -52,3 +52,11 @@
 .repeatPasswordtip{
     color: $bootstrap-red;
 }
+
+.change-password{
+    position: relative;
+    top:30%;
+    left:20%;
+    height: 30%;
+    width: 30%;
+}
