--- a/src/styles/HomepageStyle.scss
+++ b/src/styles/HomepageStyle.scss
@@ -18,3 +18,12 @@
     top:15%;
     outline: 1px solid $grey3;
 }
+
+.feature-table{
+    position: relative;
+    height: 50%;
+    width: 50%;
+    top:25%;
+    left:25%;
+    background-color: $yellow;
+}
