--- a/src/styles/ItemListStyle.scss
+++ b/src/styles/ItemListStyle.scss
@@ -3,9 +3,8 @@
     position: relative;
     margin: 0;
     height: 70%;
-    width: 1100px;
+    width: 100%;
     top:15%;
-    left:10%;
     background-color: $white;
   
 }
@@ -16,6 +15,7 @@
     display: flex;
     flex-wrap: wrap;
     overflow: auto;
+    justify-content: center;
 
 }
 .item-list-wrapper li{
@@ -30,22 +30,26 @@
 }
 .item-searchbar-input{
     position: relative;
-    padding-left: 40px;
     width: 48%;
 }
 .item-searchbar-filter{
     padding-left: 10px;
     display: flex;
     position: relative;
-    width: 48%;
+    width: 40%;
     float: left;
 }
 .item-searchbar-filter .Dropdown-root{
     float: left;
     position: relative;
-    width: 50%;
+    width: 100%;
 }
-
+.item-searchbar-button{
+    position: relative;
+    padding-left: 10px;
+    justify-content: end;
+    width: 10%;
+}
 .item-searchbar .Dropdown-control{
     border: 1px solid #ced4da;
     border-radius: 1rem;
