--- a/src/styles/ItemListStyle.scss
+++ b/src/styles/ItemListStyle.scss
@@ -20,6 +20,8 @@
 }
 .item-list-wrapper li{
     list-style-type: none;
+    height: 130px;
+    width: 510px;
 }
 .item-searchbar{
     display: flex;
