basically redux part is done

--- a/src/styles/ItemListStyle.scss
+++ b/src/styles/ItemListStyle.scss
@@ -89,3 +89,9 @@
 .item-card-wrapper hr{
     margin: 0;
 }
+.my-spinner{
+    z-index: 2;
+    position: relative;
+    height: 50%;
+    width: 50%;
+}
