make some updates for mobile adaptation

--- a/src/styles/HomepageStyle.scss
+++ b/src/styles/HomepageStyle.scss
@@ -1,29 +1,100 @@
 @import './Colors.scss';
 .homepage-wrapper{
     position: relative;
+    top:0;
     height: 100%;
     width: 100%;
-
 }
 
 .homepage-wrapper .desc{
     position: relative;
-    top: 10%;
     color: $grey3;
     font-size: xx-large !important;
 }
-
 .homepage-wrapper .searchbar{
     position: relative;
     top:15%;
     outline: 1px solid $grey3;
 }
 
+.feature-desc{
+    color: $grey3;
+    font-size: xx-large !important;
+    display: block;
+    margin-bottom: 48px;
+}
+
 .feature-table{
     position: relative;
-    height: 50%;
-    width: 50%;
+    height: 75%;
+    width: 100%;
     top:25%;
-    left:25%;
-    background-color: $yellow;
+}
+.feature-table a{
+    display: block;
+}
+.feature-table a:hover{
+    text-decoration: none;
+}
+.feature-link{
+    width: 150px;
+}
+
+.feature-table-features{
+    display: flex;
+    justify-content: space-around;
+}
+
+.feature-element{
+    border-style: solid;
+    border-color:$grey3 ;
+    width:150px;
+    color:$grey3;
+    margin: 0;
+  }
+  
+  .feature-element span{
+    display: block;
+  }
+  .feature-element-icon{
+    color:$grey3;
+  }
+  
+  
+  .feature-element:hover{
+    background-color:$yellow;
+    cursor: pointer;
+    border:none;
+    box-shadow: 0 6px 8px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    text-decoration: none;
+  }
+
+  
+@media(max-width:768px){
+    .feature-table{
+        position: relative;
+        top:20%;
+        height: 80%;
+        width: 100%;
+    }
+    .feature-desc{
+        margin-bottom:20px;
+    }
+    
+    .feature-table-features{
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 80%;
+        width: 100%;    
+    }
+
+    .feature-element{
+        margin: 5px;
+    }
+    .feature-table a{
+        position: relative;
+
+    }
 }
