--- a/src/styles/FooterStyle.scss
+++ b/src/styles/FooterStyle.scss
@@ -3,7 +3,7 @@
     position: absolute;
     width: 100%;
     height: 3.5%;
-    bottom:0%;
+    bottom:0;
     background-color: $grey3;
     color: $white;
 }
@@ -30,6 +30,8 @@
 }
 
 
-@media(max-width:960px){
-
+@media(max-width:768px){
+    .footer{
+        display: none;
+    }
 }
