--- a/src/styles/HomepageStyle.scss
+++ b/src/styles/HomepageStyle.scss
@@ -10,6 +10,7 @@
     position: relative;
     color: $grey3;
     font-size: xx-large !important;
+    top:25%;
 }
 .homepage-wrapper .searchbar{
     position: relative;
