--- a/src/styles/Colors.scss
+++ b/src/styles/Colors.scss
@@ -4,14 +4,19 @@ $my-white:#fff;
 
 
 //-------------Color Palette
-
 $my-black:#34393e;
 $blue-gray:#47646a;
 $light-blue-gray:#87adb6;
 $yellow-green:#c0c56b;
 
-// color patterns for this website
+//Color Palette 
+$dark-gray:#6b7d83;
+$light-gray:#b9c9d4;
+$light-blue:#cce2f0;
+$light-green:#9fb59d;
+$dark-green:#516d57;
 
+// color patterns for this website
 $white:#F8F8F9;
 $grey:#B5B6B4;
 $grey2:#93A5A9;
@@ -26,3 +31,11 @@ $bootstrap-red:#dc3545;
 
 //utility slider color
 $slider-rail-white:#e9ecef;
+
+//Sleek and Futuristic aka SAF
+
+$SAF_black:#2c3531;
+$SAF_green:#116466;
+$SAF_dark_orange:#D9B08c;
+$SAF_light_orange:#FFCB9A;
+$SAF_loght_blue:#D1E8E2;
