--- a/src/styles/FooterStyle.scss
+++ b/src/styles/FooterStyle.scss
@@ -2,31 +2,25 @@
 .footer{
     position: absolute;
     width: 100%;
-    height: 3.5%;
     bottom:0;
-    background-color: $grey3;
-    color: $white;
+    background-color:$SAF_black;
+    color: $SAF_loght_blue;
+    justify-content: center;
 }
 
 .footer-copyright{
-    position: relative;
-    height: 100%;
-    width: 50%;
-    float: left;  
-}
-.footer-contact{
-    position: relative;
-    height: 100%;
-    width: 50%;
-    float: left; 
+  display: inline-block;
 }
 
-.footer-contact a:link,:visited{
-    color:$white;
+.footer a{
+    color: $SAF_loght_blue!important;
 }
 
-.footer-contact a:hover{
-    color:$yellow;
+.footer a:hover{
+    color: $SAF_light_orange !important;
+}
+.footer a :link,:visited,:hover,:active{
+    text-decoration: none !important;
 }
 
 
