--- a/src/styles/NavStyle.scss
+++ b/src/styles/NavStyle.scss
@@ -1,73 +1,79 @@
 @import'./Colors.scss';
 
 
-.navbar{
+.my-navbar{
     position: fixed;
-    top:3%;
+    top:0;
     width: 100%;
-    height:auto;
+    height:50px;
     z-index: 1;
+    background-color: $SAF_black;
 }
 
-.navbar-logo{
-    position: relative;
+.my-navbar span {
+    color: $SAF_light_orange;
     height: 100%;
-    width: auto;
-    justify-content: start;
-    text-align: start;
-    font-size: xx-large;
+    font-size: 30px;
+    display: inline-flex;
+    align-items: center;
 }
 
-.navbar-logo a{
-    color: $grey3;
-    font-size:xx-large;
-    transition: color 0.2s ease-in-out;
-}
-.navbar-logo a:hover{
-    color: $yellow;
-    text-decoration: none;
+.my-navbar span:hover{
+    color:$SAF_dark_orange;
 }
 
-
-.navbar-icon{
-    width: 250px;
-    right:20px;
+.nav-item-custom{
+    font-size: 16px !important;
 }
 
-.navbar .Dropdown-control{
-    background-color: inherit;
-    border: none !important;
-    padding: 8px;
-    text-decoration: underline;
+.sidebar{
+    position: fixed;
+    top: 50px;
+    bottom: 0;
+    left: 0;
+    padding: 0;
+    width:200px;
+    background-color:$SAF_black;
+    box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+ 
 }
-.navbar .Dropdown-control:hover{
-    color: $yellow;
-    outline: none;
-    border: none !important;
+
+.nav-link{
+    color:$SAF_loght_blue;
+    background-color:$SAF_black;
+    border: none;
+    height: 100px;
+    width: 100%;
+}
+
+.nav-link span {
+    display: block;
+}
+
+.nav-link button {
+    color:$SAF_loght_blue;
+    background-color:$SAF_black;
+    border: none;
     box-shadow: none;
+    height: 100%;
+    width: 100%;
 }
+
+.nav-link button :focus {
+    border: none !important;
+    box-shadow: none !important;
+    outline-color: $SAF_black;
+}
+
+.nav-link :hover {
+    color:$SAF_black;
+    background-color: $SAF_light_orange;
+    cursor: pointer ;
+}
+
 
 @media(max-width:768px){
  
-    .navbar{
-        position: absolute;
-        top:0;
-        left:0;
-        width: 100%;
-        display: inline-block;
-        vertical-align:middle;
-        padding: 0;
-    }
- 
-    .navbar-logo{
-        width: 100%;
-        text-align: center;
-    }
-    .navbar-icon{
-        position: relative;
-        width: 300px;
-        right:0;
-        left:calc(calc(100% - 300px) / 2);
-    }
+
     
 }
