--- a/src/styles/UtilityStyle.scss
+++ b/src/styles/UtilityStyle.scss
@@ -3,10 +3,10 @@
 //mybutton
 
 .my-button{
-    background-color: $grey3; 
+    background-color: $SAF_green; 
     border: none;
     text-align: center;
-    color: $white;
+    color: $SAF_loght_blue;
     height: 30px;
     width: auto;
     border-radius: .25rem;
@@ -14,8 +14,8 @@
     transition-duration: 0.2s;
 }
 .my-button:hover {
-    background-color:$yellow;
-    color:$white;
+    background-color:$SAF_light_orange;
+    color: $SAF_black;
     cursor: pointer;
     box-shadow: 0 6px 8px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
   }
@@ -51,7 +51,7 @@
 }
 
 .my-input:focus{
-  border: 1px solid $yellow;
+  border: 1px solid $SAF_light_orange;
 }
 
 //input with span
