--- a/src/styles/UserPanelStyle.scss
+++ b/src/styles/UserPanelStyle.scss
@@ -1,9 +1,19 @@
 @import'./Colors.scss';
 
-.feature-table{
+.user-panel{
     position: relative;
     width: 100%;
     height: calc(100% - 50px);
     top:50px;
-    background-color: $SAF_green;
+    background-color: $white;
+    ;
+}
+
+
+@media(max-width:768px){
+
+    .sidebar{
+        display: none;
+    }
+
 }
