--- a/src/styles/AuthenticatorStyle.scss
+++ b/src/styles/AuthenticatorStyle.scss
@@ -12,7 +12,7 @@
 }
 .forms{
     
-    height: 220px;
+    height: 250px;
     width: 320px;
   
 
@@ -22,6 +22,9 @@
     margin: 15px;
 }
 
+.forms label{
+    margin-top:0.5rem;
+}
 
 @media(max-width:768px){
     .register-wrapper{
