refactor & continue developing

--- a/src/styles/HomepageStyle.scss
+++ b/src/styles/HomepageStyle.scss
@@ -18,6 +18,13 @@
     color: $SAF_light_orange !important;
 }
 
+.desc a{
+    color: $SAF_light_orange!important;
+}
+
+.desc a:hover{
+    color: $SAF_dark_orange !important;
+}
 
 
   
