--- a/src/styles/ItemDetailStyle.scss
+++ b/src/styles/ItemDetailStyle.scss
@@ -16,6 +16,8 @@
    top:0%;
   right:0%;
   z-index: 2;
+  height: 30px !important;
+  width: 30px !important;
 }
 .container{
     align-items: start;
@@ -87,4 +89,14 @@
     border: 1px solid #ced4da;
     border-radius: 1rem;
     outline: none;
+  }
+
+  @media(max-width:768px){
+
+    .item-detail-wrapper{
+      width: 100% !important;
+      left: 0 !important;
+      top:20px !important;
+      padding: 5% !important;
+    }
   }
