--- a/src/styles/UserPanelStyle.scss
+++ b/src/styles/UserPanelStyle.scss
@@ -1,12 +1,12 @@
 @import'./Colors.scss';
 
 .user-panel{
-    position: relative;
+    position: absolute;
     width: 100%;
     height: calc(100% - 50px);
     top:50px;
     background-color: $white;
-    ;
+    
 }
 
 
