--- a/src/styles/ItemDetailStyle.scss
+++ b/src/styles/ItemDetailStyle.scss
@@ -3,85 +3,38 @@
     position: relative;
     margin: 0;
     height: auto;
-    width: 60%;
-    left: 20%;
-    top:20%;
+    width: 600px;
+    top:0;
     background-color: $white;
     border-radius: 0.25rem;
     box-shadow: 0 6px 8px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
   
 }
-.btn-cancel{
-  position: absolute;
-   top:0%;
-  right:0%;
-  z-index: 2;
-  height: 30px !important;
-  width: 30px !important;
-}
-.container{
-    align-items: start;
-    text-align: start;
-    justify-content: center;
-    height: 100%;
+
+.item-detail-wrapper .form-row{
+  margin: 5px !important;
 }
 
-.container .row{
-    height: 20%;
-    padding: 1%;
+.item-detail-wrapper .form-group{
+  margin-top: 15px !important;
 }
 
-.container .col-8 .slider-wrapper{
-    position: relative;
-    top:40%;
-}
-
-.container .col-4 .my-button{
-    position: relative;
-    margin-left: 10%;
-}
-
-
-.category-wrapper{
-    position: relative;
-    width: 100%;
-    float: left;
-    height: 100%;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
+// for creatable react-select
+.form-group div{
+  border-radius: 1rem;
   }
-  .category-text{
-    position: relative;
-    float: left;
-    width: 50%;
-    height: 100% !important;
-    line-height: 40px;
-  }
-
-  .custom-select{
-    position: relative;
-    width: 100% !important;
-    border: 1px solid #ced4da;
-    border-radius: 1rem;
-    outline: none;
-  }
-
-  .custom-select:focus{  
-        border: 1px solid $yellow;  
-  }
-  
-  .expireDate-wrapper{
-    position: relative;
-    width: 100%;
-    float: left;
-    height: 100%;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
+ 
+  .cancel-button{
+    position: absolute !important;
+    top:0 !important;
+    right: 0px !important;
+    height: 30px !important;
+    width: 30px !important;
+    background-color: $bootstrap-red !important;
   }
 
   .expireDate-picker{
+    height: 36px;
     position: relative;
     justify-content: center;
     align-items: center;
@@ -95,8 +48,8 @@
 
     .item-detail-wrapper{
       width: 100% !important;
-      left: 0 !important;
-      top:20px !important;
+      top:10px !important;
+      left:0 !important;
       padding: 5% !important;
     }
   }
