work on item detail page

--- a/src/styles/Colors.scss
+++ b/src/styles/Colors.scss
@@ -30,4 +30,4 @@ $SAF_black:#2c3531;
 $SAF_green:#116466;
 $SAF_dark_orange:#D9B08c;
 $SAF_light_orange:#FFCB9A;
-$SAF_loght_blue:#D1E8E2;
+$SAF_light_blue:#D1E8E2;
