--- a/src/styles/FooterStyle.scss
+++ b/src/styles/FooterStyle.scss
@@ -4,7 +4,7 @@
     width: 100%;
     bottom:0;
     background-color:$SAF_black;
-    color: $SAF_loght_blue;
+    color: $SAF_light_blue;
     justify-content: center;
 }
 
@@ -13,7 +13,7 @@
 }
 
 .footer a{
-    color: $SAF_loght_blue!important;
+    color: $SAF_light_blue!important;
 }
 
 .footer a:hover{
