--- a/src/styles/UtilityStyle.scss
+++ b/src/styles/UtilityStyle.scss
@@ -6,7 +6,7 @@
     background-color: $SAF_green; 
     border: none;
     text-align: center;
-    color: $SAF_loght_blue;
+    color: $SAF_light_blue;
     height: 30px;
     width: auto;
     border-radius: .25rem;
