--- a/src/index.scss
+++ b/src/index.scss
@@ -22,6 +22,9 @@ p{
   text-align: center;
   height: 100% ;
   width: 100% ;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color:$white;
 }
 
