--- a/src/styles/PanelSubComponentStyles.scss
+++ b/src/styles/PanelSubComponentStyles.scss
@@ -13,18 +13,16 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    top:50px;
-    height: 80%;
+    height: 100% ;
     width: calc(100% - 200px);
     left: 200px;
-
 }
 
 @media(max-width:768px){
     .check-pantry{
         top:0 !important;
         height: auto !important;
-        width:100%;
+        width:100% !important;
         padding: 1%;
         left: 0;
     }
